assets/css/index.css
/* ... */
.SVGWrapper{
  width: 45vw;
  height: auto;
  }

/*============================================================
bottomSpace Page
============================================================*/

.bottomSpace{
  box-sizing: border-box;
  height: 100vh;
  position: relative;
  width: 80%;
  z-index: 0;
  overflow: hidden;
}

.bottomSpace .content {
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
  display: flex;
  justify-content: center;
  width:80vw;
  height: 100%;
}


.wrap{
  width: 59vw;
  max-width: 1000px;
  min-height: 55vh;
  white-space: normal;
}

.copyright{
  padding-bottom: 50px;
}

.logoAbout{
  width: 100%;
  display: flex;
  justify-content: center;
  margin-top: 40px;
  margin-bottom: 50px;
}

.contact{
  width: 100%;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.connectList{
  width: 100%;
  display: flex;
  justify-content: flex-start;
}

.connect a{
  display: inline-block;
  color: inherit;
  background: transparent;
  text-decoration: none;
}

.contact a {
  color: inherit;
  background: transparent;
  text-decoration: none;
}

.contact p, .connect p{
  border-bottom: 3px solid #1E1E1E;
  font-style: italic;
  margin-right: 48px;
}

.locationItem{
  width: 100%;
  padding-bottom: 20px;
}

.locationItem a {
  color: inherit;
  background: transparent;
  text-decoration: none;
}

.locationItem:first-child{
  border-top: none;
}

.spacer {
  height: 100px;
}

.optionList{
}

.optionItem{
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 74px;
}

.optionItem:last-child{
  border-bottom: none;
}

.expandButton{
  overflow: hidden;
  background-color: #FAFAFA;
  display: flex;
  align-items: center;
  height: 94px;
}

.expandButton p{
  border-bottom: 3px solid #1E1E1E;
  cursor: pointer;
}

.listItem {
  overflow: hidden;
  background-color: #FAFAFA;
  display: flex;
  align-items: center;
  height: 78px;
  transition: height 300ms;
}

.listItem:last-child{
  border-bottom: none;
}

.list .listHider:nth-child(n+7) {
   height: 0;
   border-color: #FAFAFA;
}

.map{
  width: 100%;
}

/* Iframe Booking Feature
*/

label .select-item {
  border: none;
  border-top: 3px solid #1E1E1E;
}

#acuityLink{
  display: none;
  font-style: italic;
  color: #1e1e1e;
}

#acuityLink p {
  border-bottom: 2px solid #1E1E1E;
  display:inline-block;
}

.topSpaceActiveHover{
  width: 97%;
}

.topSpaceInactiveHover{
  width: 28%;
}

.fourohfour{
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100vw;
  flex-grow: 1;

}

.fourohfour h1 {
  line-height: 50px;
  transform-origin: center;
  font-size: 30vw;
  -webkit-animation:spin 120s linear infinite;
  -moz-animation:spin 120s linear infinite;
  animation:spin 120s linear infinite;
  text-align: center;
  color: #FF725C;
}

.fourOhFourMessage{
  font-style: italic;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-grow: .2;
}

.fourOhFourMessage p {
  border-bottom: 3px solid #1E1E1E;
}

.fourOhFourMessage p:hover {
  color: #FF725C;
  cursor: pointer;
}

#errorBody .header{
  width: 100vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100vh;
}
#errorBody .mainMenu{
  width: 100vw;
  margin-left: 0;
  pointer-events: none;
}

#errorBody .headerArrowContainer {
  min-width: 50px;
  margin-left: 30px;
}

#errorBody .headerArrowContainer #x{
  transform-origin: center;
  text-align: center;
  color: #1E1E1E;
  -webkit-animation:spin 30s linear infinite;
  -moz-animation:spin 30s linear infinite;
  animation:spin 30s linear infinite;

}

#errorBody .beamBox{
  width: 100vw;
}

#errorBody {
  width: 100vw;
  background: #FAFAFA;
}

@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }

@media only screen and (max-width: 769px) {
  h1{
    font-size: 26px;
  }

  h2{
    font-size: 26px;
  }

  .wrap{
    width: calc(80vw - 64px);
    margin-bottom: 130px;
  }

  section{
    margin-bottom: 75px;
  }

  .contentArrowContainer{
    transform: translateY(35vh);
  }

  .galleryArrowRightContainer{
    padding-right: 5%;
  }

  .galleryArrowLeftContainer{
    padding-left: 5%;
  }

  .galleryArrowContainer h2{
    display: block;
    font-size: 18px;
    }

  .galleryArrowRight{
    transform: scale(0.5)
  }

  .galleryArrowLeft{
    transform: rotateZ(180deg) scale(0.5);
  }

  .headerArrow{
  }

  .pillar{
    width: 5px;
  }

  .beam{
    height: 5px;
  }

  .gallery img{
    max-width: calc(80vw - 60px);
    max-height:70vh;
    width: auto;
    height: auto;
  }

  .logoAbout{
    height: 80px;
    margin-bottom: 100px;
  }

  .logoAboutSVG{
    transform: scale(0.5)
  }

  .siteTitle{
    height: 86px;
  }

  .header{
    height: 90px;
  }

  .location{
    height: 80px;
  }

  .mainMenu{
    width: calc(80vw - 60px);
    margin-left: 0;
  }

  .frame {
    align-items: center;
  }

  #acuity{
    display: none;
  }

  #acuityLink{
    display: block;
  }


  .listItem h4 {
    line-height: 30px;
  }

  .galleryArrowLeftContainer, .galleryArrowRightContainer{
    align-self: flex-end;
    margin-bottom: 1vw;
  }

}
/* ... */

